# mtv

./: .env  Cargo.toml  README.MD  log4rs.yml
mtv/: Cargo.toml
mtv-config/: Cargo.toml
mtv-config/src/: lib.rs
mtv-dao/: 1.rs  Cargo.toml  down.sql  up.sql
mtv-dao/src/: goods.rs  lib.rs  movie.rs  order.rs  user.rs
mtv-dao/src/movie/: mod.rs  video.rs
mtv-srv/: Cargo.toml
mtv-srv/src/: goods.rs  lib.rs  order.rs  pay.rs  user.rs  users.rs
mtv-srv/src/movie/: mod.rs  video.rs
mtv-srv/src/utils/: errors.rs  mod.rs  oss.rs  pay.rs  redis_client.rs
mtv/src/: main.rs
mtv/src/api/: goods.rs  mod.rs  movie.rs  movies.rs  order.rs  pay.rs  scores.rs  user.rs  users.rs  utils.rs
mtv/src/middleware/: appid.rs  me.rs  mod.rs
mtv/src/utils/: res.rs
sqlrs/: Cargo.toml
sqlrs-macros/: Cargo.toml
sqlrs-macros/src/: lib.rs
sqlrs/src/: lib.rs
wxpay/: Cargo.toml
wxpay/src/: lib.rs  wxpay.rs
