[package]
name = "mtv-dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlrs = { path = "../sqlrs" }
sqlrs-macros = { path = "../sqlrs-macros" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "*", features = [
    "with-time-0_3",
    "runtime",
    "with-serde_json-1",
    "array-impls",
    "with-chrono-0_4",
] }
postgres-types = { version = "*", features = ["derive"] }
