[package]
name = "mtv-srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
log = "0.4"
tokio = { version = "1", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mtv-config = { path = "../mtv-config" }
mtv-dao = { path = "../mtv-dao" }
redis = { version = "0.23", features = ["tokio-comp"] }
lazy_static = "1.4"
uuid = { version = "1", features = ["v4"] }
snafu = "0.7"
actix-web = "4"
chrono = "0.4"
crypto = "0.5"
aes-gcm = "0.10"
hex = "0.4"
base64 = "0.21"
