[package]
name = "mtv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
sqlrs = { path = "../sqlrs" }
actix-cors = "0.6"
actix-files = "0.6"
actix-multipart = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = "4"
actix-web-lab = "0.19"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
fast_log = "1.5"
futures = "0.3"
futures-util = { version = "0.3.17", default-features = false, features = [
    "std",
] }
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
mtv-config = { path = "../mtv-config" }
validator = { version = "0", features = ["derive"] }
mtv-srv = { path = "../mtv-srv" }
snafu="*"
log="*"
anyhow = "*"