[package]
edition = "2021"
name = "wxpay"
version = "0.1.0"
authors = ["刘荣飞 <yes@noxue.com>"]
description = "微信支付"
license = "MIT OR Apache-2.0"
keywords = ["pay", "wxpay"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13"
chrono = "0.4"
crypto = "0.5"
rand = "0.8"
reqwest = {version = "0.11", features = ["json"]}
rsa = "0.6.1"
sha2 = "0.10"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
log = "0.4"
hex="0.4"
aes-gcm="0.10"
tokio="1"